tests/failure/more_than_two_args.stderr
error: expected 2 arguments
  --> $DIR/more_than_two_args.rs:17:11
   |
17 |     fn op(&self, other: &B, more: i32) -> i32 {
   |           ^
